# DocuBot

./: .gitignore  README.md
docubot/: Cargo.toml  corpus.json  documentations.json  embeddings.txt
docubot/docueyes/: Cargo.toml
docubot/docueyes/src/: corpus.rs  engine.rs  lib.rs  model.rs
docubot/src/: BITs.rs  consts.rs  logg.rs  main.rs  server.rs
docubot/src/api/: endpoints.rs
docubot/testdata/: frongos.txt
