[package]
name = "docubot"
version = "0.1.0"
edition = "2024"

[dependencies]
docueyes = { path = "./docueyes" }
indicatif = "0.16"
console = { version = "0.16", features = ["std"] }
typenum = "1.18.0"
anyhow = "1.0.99"
serde = "1.0.219"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
