[package]
name = "docubot"
version = "0.1.0"
edition = "2024"

[dependencies]
docueyes = { path = "./docueyes" }
indicatif = "0.16"
console = { version = "0.16", features = ["std"] }
typenum = "1.18.0"
anyhow = "1.0.99"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
tiny_http = "0.12.0"
lazy_static = "1.5.0"
colored = "3.0.0"
protobuf = "3.7.2"
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.143"
simple-logging = "2.0.2"
log = "0.4.27"
flexi_logger = "0.31.2"
